fix contact form toggle on mobile and fix placeholder text font in contact form msg text area

--- a/website/public/stylesheets/contact-form.css
+++ b/website/public/stylesheets/contact-form.css
@@ -42,6 +42,7 @@
 #contact-form >textarea {
     resize:vertical;
     height: 100%;
+    font-family: 'Zen Old Mincho', serif;
 }
 
 #submit {
